# org_attach

./: .gitignore  .travis.yml  Pipfile  README.md  doi.py  doi_to_org.py  example_doirc.yaml  example_orgattachrc.yaml  pyproject.toml  setup.py  test.py
.github/workflows/: main.yml
org_attach/: __init__.py  __main__.py  html_inliner.py  org_attach.py
test_data/: casanova_input.bib  casanova_local_pdf_input.bib  casanova_missing_author_input.bib  casanova_output.org  input.doi  ipynb_py.org  ipynb_r.org  knuth_input.bib  knuth_output_attachment.org  output.org  test_python.ipynb  test_r.ipynb
