[tool.poetry]
name = "org_attach"
version = "0.0.1"
description = "Script to attach various types of files to an org-mode notebook"
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.5"
pybtex = "^0.22.2"
python-magic = "^0.4.15"
requests = "^2.22"
jupyter = "^1.0"
bs4 = "^0.0.1"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
